--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://localhost:27017"
+DATABASE_URL="mongodb://localhost:27017/visits"
+JWT_SECRET=354354
+JWT_EXPIRATION_TIME=3600
