--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/mongoose": "^9.1.1",
@@ -30,7 +31,10 @@
     "@nestjs/swagger": "^5.2.1",
     "@prisma/client": "^3.15.2",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "joi": "^17.6.0",
     "mongoose": "^6.4.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
