--- a/.env
+++ b/.env
@@ -4,7 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://localhost:27017/visits"
+
+MONGO_DATABASE=visits
+MONGO_HOST=127.0.0.1
+MONGO_PORT=27017
+
 JWT_SECRET=354354
 JWT_EXPIRATION_TIME=3600
 
