--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cookie-parser": "^1.4.6",
     "joi": "^17.6.0",
     "mongoose": "^6.4.0",
+    "nestjs-url-generator": "^1.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
